--- a/client/src/pages/BlogPage/BlogContent/BlogContent.css
+++ b/client/src/pages/BlogPage/BlogContent/BlogContent.css
@@ -3,16 +3,18 @@
 }
 
 .blog-content__container {
-    --padding-left-right: min( 3vw, 200px );
+    --padding-left-right: min( 5vw, 500px );
     --padding-top-bottom: min( 3vh, 200px );
     --margin-top: min(2vh, 200px);
+    --margin-left: min(8vw, 500px);
     padding: var(--padding-top-bottom) var(--padding-left-right);
     margin-top: var( --margin-top );
     text-align: left;
     display: flex;
     flex-direction: column;
+    width: 40vw;
+    margin-left: var(--margin-left); /* Leave room for table of contents */
     align-items: center;
-    justify-content: center;
 }
 
 .blog-content {
@@ -22,38 +24,32 @@
     width: fit-content;
     text-decoration: none;
     color: #000;
-    width: 100%;
     transition: background .3s ease-in;
 }
 
 @media screen and (max-width: 768px) {
     .blog-content, .blog-content__header {
         min-width: 300px;
-        max-width: 1000px;
+        max-width: 800px;
     }
 
     .blog-content__container {
-        width: 90vw;
+        min-width: 90vw;
+        margin-left: 0; /* no more table of contents for small sreen */
     }
 }
 
 @media screen and (min-width: 769px) {
     .blog-content, .blog-content__header {
-        min-width: 300px;
-        max-width: 1000px;
-        margin-right: 12vw;
+        min-width: 500px;
+        max-width: 1100px;
+    }
+
+    .blog-content__container {
+        min-width: 500px;
     }
 }
 
-
-.blog-content img {
-    width: 30vw;
-    max-width: 300px;
-    height: auto;
-    max-width: 100%;
-    margin: 0 auto;
-    display: block;
-}
 
 
 .blog-content pre {
@@ -71,6 +67,12 @@
 
 .blog-content>h1 {
     display: none; /* Hide the title inside the markdown file itself because it already exists from request */
+}
+
+
+.blog-content img {
+    width: 98%;
+    border-radius: 12px;
 }
 
 .blog-content__image {
