--- a/client/src/pages/BlogPage/BlogPage.css
+++ b/client/src/pages/BlogPage/BlogPage.css
@@ -17,7 +17,7 @@
 }
 
 .blog__featured {
-    width: 20%;
+    width: 30%;
     border-left: .1px solid #888;
     padding: 4vh 0 0 4vw;
 }
@@ -27,9 +27,9 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
-    width: 60%;
+    width: 82%;
     margin-bottom: 5vh;
-    overflow-x: scroll;
+    flex-wrap: wrap;
 }
 
 
@@ -44,17 +44,21 @@
 
     .blog__tag-container {
         width: 100%;
+        overflow-x: scroll;
     }
 }
 
 .blog__tag {
-    padding: 9px;
-    background: #1390ff;
-    font-size: min(max(10px, .5vw), 15px);
-    display: block;
-    width: fit-content;
-    border-radius: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 9px;
+    font-size: min(max(12px, .5vw), 15px);
+    border-radius: 4px;
+    box-shadow: .2px .2px .1px #888;
     border: .1px solid #888;
     color: white;
-    margin: 0px 2px;
+    margin: 3px 2px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
